--- a/css/index.css
+++ b/css/index.css
@@ -2,12 +2,16 @@ body{
     background-color: #F5F1ED;
     margin: 0;
     padding: 0;
-       
+    height:100px;
+    width:300px;
+    overflow-y:scroll;
+    overflow-x:hidden;
+
 }
 .content{
     width: 50%;
     height: auto;
-    background-color: #E8DCB9;  
+    /* background-color: #E8DCB9;   */
     position: absolute;
     margin-top: 2%;
     border-radius: 20px;
@@ -18,7 +22,7 @@ body{
 .titulo{
     color: #0D1B1E;
     font-weight: bolder;
-    font-size: x-large;
+    font-size: xx-large;
     text-align: center;
     font-family: 'Oswald', sans-serif;
     line-height : 15px;
@@ -39,7 +43,7 @@ body{
     padding: 1em;
     width: 15%;
     height: auto;
-    background-color: #E8DCB9;
+    background-color: #EBE1C1;
     text-align: center;
     line-height : 8px;
 
@@ -72,7 +76,7 @@ body{
     font-weight: bolder;
     background-color: #c3e2c6;
     position: absolute;
-    margin-top: 10%;
+    margin-top: 12%;
     margin-left: 0;
     border-radius: 20px;
     left: 78%;
@@ -86,7 +90,7 @@ body{
 .img1 .program{
     margin-left: 20%;
     width: 150px;
-    word-spacing: 12pt;
+    word-spacing: 15pt;
     text-align: left;
     font-size: small;
     font-style: italic;
@@ -123,7 +127,7 @@ body{
     font-weight: bolder;
     background-color: #c3e2c6;
     position: absolute;
-    margin-top: 27%;
+    margin-top: 29%;
     border-radius: 20px;
     left: 78%;
     padding: 1em;
@@ -164,16 +168,28 @@ body{
     left: 82.5%;
     padding: 1em;
     position: absolute;
-    margin-top: 12px;
+    margin-top: 2%;
 }
 
+.descargar{
+    width: 80px;
+    height: 20px;
+    background-color: #F2CEE6;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 20px;
+    left: 82.5%;
+    padding: 1em;
+    position: absolute;
+    margin-top: 7%;
+}
 
 .foto{
-    width: 150px;
-    height: 150px;
+    width: 170px;
+    height: 170px;
     left: 7.5%;
     position: absolute;
-    margin-top: 10px;
+    margin-top: 15px;
     display: inline-block;
     position: absolute;
     overflow: hidden;
@@ -229,9 +245,9 @@ body{
     text-align: center;
     font-weight: bold;
     width: 15%;
-    margin-top: 22%;
+    margin-top: 23%;
     height: auto;
-    background-color: #C3DBC5;
+    background-color: #EBE1C1;
     border-radius: 20px;
     left: 5%;
     padding: 1em;
@@ -255,4 +271,74 @@ body{
     line-height: 8px;
     text-align: center;
     margin-bottom: auto;
+}
+
+.experience .sub{
+    font-size: small;
+    font-weight: light;
+    text-align: left;
+}
+
+.experience .title{
+    font-weight: blond;
+    text-align: left;
+}
+
+.detalles{
+    font-weight: light;
+    text-align: left;
+    line-height: normal;
+    font-weight: 500;
+}
+
+.white{
+    position: absolute;
+    width: 100%;
+    height: 200xp;
+    margin-top: 70%;
+    font-weight: bolder;
+    text-align: center;
+}
+
+.white img{
+    width: 25px;
+
+
+}
+
+.referencias{
+    line-height: 9px;
+    position: absolute;
+    text-align: center;
+    font-weight: bold;
+    width: 15%;
+    margin-top: 40%;
+    height: auto;
+    background-color: #EBE1C1;
+    border-radius: 20px;
+    left: 5%;
+    padding: 1em;
+
+}
+
+
+.referencias .sub{
+    font-size: small;
+    font-weight: normal;
+    text-align: left;
+}
+
+.referencias .sub1{
+    font-size: small;
+    font-weight: normal;
+    text-align: left;
+    line-height: 10px;
+
+}
+
+.referencias .title{
+    font-weight: blond;
+    text-align: left;
+    font-size: small;
+    line-height: 12px;
 }
