--- a/css/index.css
+++ b/css/index.css
@@ -323,10 +323,12 @@ body{
     padding: 1em;
     font-weight: bold;
     line-break: 10px;
+    
 }
 
 
 .experience .sub{
+    width: 100%;
     font-size: small;
     font-weight: light;
     text-align: left;
@@ -341,7 +343,7 @@ body{
     width: 100%;
     height: auto;
     text-align: start;
-    line-height: 15px;
+    line-height: 8px;
     font-size: small;
 }
 
@@ -355,15 +357,16 @@ body{
     flex-wrap: wrap;
     align-content: flex-start;
     width: 100%;
-    height: auto;
+    height: 20%;
     padding: 1em;
     margin-top: 0;
     text-align: center;
     font-weight: bold;
+    line-height: 5px;
 }
 
 .education a{
-    line-height: 18px;
+    width: 100%;
     text-align: left;
     color: #14213d;
     text-decoration: none;
@@ -372,21 +375,26 @@ body{
 
 
 .education .sub{
+    width: 100%;
+    margin-left: 2%;
     font-size: small;
     font-style: italic;
     font-weight: lighter;
     text-align: left;
 }
 
-.education .sub1{
-    font-size: small;
+.education .tit1{
+    width: 100%;
+    font-size: medium;
     font-weight: light;
     text-align: left;
+    line-height: 18px;
 }
+
 
 .profile{
     order:-1;
-    height: 20%;
+    height: 3%;
     padding: 1em;
     font-weight: bold;
     line-height: 8px;
