--- a/css/index.css
+++ b/css/index.css
@@ -18,27 +18,28 @@ body{
     flex-wrap: wrap;
 }
 
-.cabecera-content{
+header{
     margin-top: 2%;
+    width: 100%;
     display: flex;
     justify-content: space-around;
-    width: 100%;
+    flex-wrap: wrap;
     height: 18%;
-
 }
 
-.cabecera-content .title_big{
+header .title_big{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     order: 1;   
-    width: 54%;
-    font-size: 4vw;
-    color: #14213d;
-    font-weight: bolder;
-    font-size: xx-large;
+    width: 48%;
+    height: 100%;
     text-align: center;
-    line-height: 13px;
+    font-size: large;
 }
 
 .title{
+    display: flex;
     width: 100%;
     height: 20px;
     color: #ffffff;
@@ -50,20 +51,21 @@ body{
     align-items: center;
 
 }
-.foto-content{
+.profile_photo{
     display: flex;
-    justify-content: center;
-    width: 20%;
+    align-items: center;
+    width: 18%;
+    margin: 0%;
 }
 
-.foto{
-    width: 160px;
-    height: 160px;
+.profile_photo figure{
+    width: 65%;
+    height: 110%;
     overflow: hidden;
     border-radius: 45%;
 }
 
-.foto img{
+.profile_photo figure img{
     width: 100%;
     height: 100%;
     display: inline-block;
@@ -240,7 +242,7 @@ body{
     height: 70%;
 }
 
-.skills .carta{
+.skills figure{
     width: 16%;
     height: 25%;
     margin: 1em;
@@ -248,9 +250,14 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    font-size: smaller;
 }
 
+.skills figure figcaption{
+    font-size: smaller;
+    color: #14213d;
+    text-align: center;
+    font-style: oblique;
+}
 .skill_tecnical{
     padding: 1em;
     font-weight: bolder;
@@ -301,8 +308,10 @@ body{
 }
 
 .cursos .more{
-    text-align: center;
+    margin: 10%;
+    text-align:center;
     color:#e63946;
+    
 }
 .center-content{
     border-radius: 2%;
