--- a/css/index.css
+++ b/css/index.css
@@ -3,17 +3,6 @@ body{
     padding: 0;
     color: #264653;
     align-items: center;
-}
-
-.background{
-    width: 100%;
-    height: 100%;
-    position:fixed;
-    background-color: #fffffc ;
-    padding:0;
-    margin:0;
-    overflow-y:scroll;
-    overflow-x:hidden;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -21,11 +10,11 @@ body{
 
 header{
     margin-top: 2%;
-    width: 100%;
+    width: 90%;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    height: 18%;
+    height: 16%;
 }
 
 header .title_big{
@@ -55,13 +44,13 @@ header .title_big{
 .profile_photo{
     display: flex;
     align-items: center;
-    width: 18%;
+    width: 19%;
     margin: 0%;
 }
 
 .profile_photo figure{
     width: 65%;
-    height: 110%;
+    height: 80%;
     overflow: hidden;
     border-radius: 45%;
 }
@@ -76,7 +65,6 @@ header .title_big{
 }
 .botton{
     width: 20%;
-    height: 100%;
     order: 1;
     display: flex;
     justify-content: space-around;
@@ -88,7 +76,7 @@ header .title_big{
     justify-content: center;
     width: 70%;
     align-items: center;
-    height: 26%;
+    height: 18%;
     background-color: #e76f51;
     color: white;
     font-weight: bold;
@@ -100,10 +88,9 @@ header .title_big{
     text-decoration: none;
 }
 
-.main{
+main{
     margin-top: 2%;
-    width: 100%;
-    height: auto;
+    width: 90%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -115,9 +102,8 @@ header .title_big{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    height: 82%;
     width: 17%;
-
+    height: 700px;
 }
 
 .contacto{
@@ -125,50 +111,37 @@ header .title_big{
     border-radius: 20px;
     background-color: #fdffb6;
     text-align: center;
-    line-height : 8px;
-    height: 18%;
+    height: 20%;
     width: 90%;
 }
 
-.info{
-    width: 50%;
-    height: auto;
+.contacto figure{
+    width: 100%;
+    text-align: left;
 }
-
-.telefono{
-    display:block;
-    margin:auto;
-}
-
 .contacto img{
     height: auto;
     width: 20px;
     vertical-align: middle;
-
-}
-
-.telemail{
-    width: auto;   
 }
 
 .blandas {
-    text-align: center;
+    text-align: left;
     font-weight: bold;
     width: 90%;
     height: 20%;
     background-color: #fdffb6;
     border-radius: 20px;
     padding: 1em;
-    line-height: 8px;
 
 }
-.blandas .sub1{
+.blandas span{
     font-weight: normal;
     text-align: left;
+    display:block;
 }
 
 .referencias{ 
-    text-align: center;
     font-weight: bold;
     width: 90%;
     height: 35%;
@@ -179,16 +152,17 @@ header .title_big{
 
 
 
-.referencias .sub{
-    width: 100%;
+.referencias span{
     font-size: small;
     font-weight: normal;
     text-align: left;
-    margin-left: 2%;
+    margin-left: 0.5%;
+    display:block;
+
 }
 .skill-content{
     margin-top: 1%;
-    width: 17%;
+    width: 18%;
     height: auto;
     display: flex;
     justify-content: space-around;
@@ -208,8 +182,6 @@ header .title_big{
 }
 .skill_object{
     order : 1;
-    width: 100%;
-    height: 50%;
     display: flex;
     flex-wrap: wrap;
     justify-self: center;
@@ -224,7 +196,7 @@ header .title_big{
 
 .skills .title1{    
     order : 1;
-    width: 80%;
+    width: 100%;
     height: 8%;
     font-weight: bold;
     font-size: medium;
@@ -292,7 +264,7 @@ header .title_big{
 .cursos a{
     line-height: 18px;
     font-weight: normal;
-    color: black;
+    color: #264653;
     text-decoration: none;
 }
 
@@ -325,28 +297,22 @@ header .title_big{
     width: 100%;
     height: auto;
     padding: 1em;
-    font-weight: bold;    
+    font-weight: bold;  
+      
 }
 
 .experience .sub{
     margin: 2%;
     width: 100%;
-    font-size: small;
+    font-size: medium;
     font-weight: normal;
-    line-height: 10%;
+    font-style: oblique;
 }
 .title_job{
     text-align: left;
     width: 100%;
     height: auto;
     text-align: start;
-    font-size: small;
-}
-.title_job1{
-    width: 100%;
-    height: auto;
-    text-align: start;
-    line-height: 8px;
     font-size: small;
 }
 
@@ -361,12 +327,13 @@ details{
     flex-wrap: wrap;
     align-content: flex-start;
     width: 100%;
-    height: 18%;
+    height: auto;
     padding: 1em;
     margin-top: 0;
     text-align: center;
     font-weight: bold;
     line-height: 1px;
+    padding-bottom: 0%;
 }
 
 .education a{
@@ -385,9 +352,10 @@ details{
     font-style: italic;
     font-weight: lighter;
     text-align: left;
+    line-height: normal;
 }
 
-.education .tit1{
+.tit1{
     width: 100%;
     font-size: medium;
     font-weight: bold;
@@ -402,11 +370,11 @@ summary{
 
 .profile{
     order:-1;
-    height: 3%;
     padding: 1em;
     font-weight: bold;
     line-height: 8px;
     text-align: center;
+    padding-bottom: 0%;
 }
 
 .profile .sub{
@@ -418,6 +386,7 @@ summary{
 
 footer{
     margin-top: 3%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
