--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,6 @@
 body{
     width: 100%;
     height: 100%;
-    position: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +11,6 @@ header{
 }
 main{
     width: 25%;
-    height: 80%;
     display: flex;
     justify-self: center;
     align-content: center;
@@ -48,10 +46,9 @@ input{
 }
 
 footer{
-    margin-top: 3%;
-    display: flex;
-    justify-content: center;
-    justify-self: flex-end;
+    position: absolute;
+    bottom: 0;
+    color: white;
 }
 
 footer img{
