--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,9 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 body{
     width: 100%;
     height: 100%;
@@ -6,19 +12,23 @@ body{
     align-items: center;
 }
 header{
+    margin-top: 2%;
     display: flex;
     justify-content: center;
 }
 main{
     width: 25%;
+    height: 350px;
     display: flex;
     justify-self: center;
     align-content: center;
     flex-flow: column wrap;
+
 }
 
 form{
-    height: 40%;
+    margin-top: 10%;
+    height: 50%;
     border-radius: 4%;
     display: flex;
     justify-content: space-around;
@@ -47,6 +57,9 @@ input{
 
 footer{
     position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 100%;
     bottom: 0;
     color: white;
 }
