--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,9 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -10,8 +16,8 @@ body{
 
 header{
     margin-top: 2%;
-    width: 90%;
     display: flex;
+    width: 90%;
     justify-content: space-around;
     flex-wrap: wrap;
     height: 16%;
@@ -39,24 +45,17 @@ header .title_big{
     display: flex;
     justify-content: center;
     align-items: center;
-
+    margin-bottom: 10px;
 }
 .profile_photo{
     display: flex;
-    align-items: center;
-    width: 19%;
+    width: 18%;
     margin: 0%;
-}
-
-.profile_photo figure{
-    width: 65%;
-    height: 80%;
-    overflow: hidden;
-    border-radius: 45%;
+    text-align: center;
 }
 
 .profile_photo figure img{
-    width: 100%;
+    width: 75%;
     height: 100%;
     display: inline-block;
     position: relative;
@@ -76,7 +75,7 @@ header .title_big{
     justify-content: center;
     width: 70%;
     align-items: center;
-    height: 18%;
+    height: 26%;
     background-color: #e76f51;
     color: white;
     font-weight: bold;
@@ -102,7 +101,7 @@ main{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    width: 17%;
+    width: 20%;
     height: 700px;
 }
 
@@ -113,11 +112,12 @@ main{
     text-align: center;
     height: 20%;
     width: 90%;
+    line-height: 25px;
 }
 
 .contacto figure{
     width: 100%;
-    text-align: left;
+    text-align: center;
 }
 .contacto img{
     height: auto;
@@ -129,10 +129,11 @@ main{
     text-align: left;
     font-weight: bold;
     width: 90%;
-    height: 20%;
+    height: 23%;
     background-color: #fdffb6;
     border-radius: 20px;
     padding: 1em;
+    line-height: 25px;
 
 }
 .blandas span{
@@ -148,6 +149,7 @@ main{
     background-color: #fdffb6;
     border-radius: 20px;
     padding: 1em;
+    line-height: 25px;
 }
 
 
@@ -158,6 +160,7 @@ main{
     text-align: left;
     margin-left: 0.5%;
     display:block;
+    line-height: 20px;
 
 }
 .skill-content{
@@ -240,17 +243,16 @@ main{
 
 .skill_tecnical .titulos_skils{
     width: 100%;
-    margin: 1em;
     text-align: left;
     font-weight: bold;
     font-size: medium;
 }
 
 .skill_tecnical .programas{
-    margin: 1em;
-    width: 90%;
+    width: 100%;
     text-align: left;
     font-weight: normal;
+    line-height: 23px;
 }
 .cursos{
     padding: 1em;
@@ -261,17 +263,14 @@ main{
     text-align: left;
 }
 
+.cursos ul{
+    margin-left: 25px;
+}
 .cursos a{
     line-height: 18px;
     font-weight: normal;
     color: #264653;
     text-decoration: none;
-}
-
-.cursos .title{
-    width: 100%;
-    text-align: center;
-    font-size: medium;
 }
 
 .cursos .more{
@@ -285,7 +284,7 @@ main{
     background-color: #caffbf;
     margin-top: 1%;
     order:-1;
-    width: 42%;
+    width: 44%;
     height: auto;
     display: flex;
     flex-wrap: wrap;
@@ -307,7 +306,14 @@ main{
     font-size: medium;
     font-weight: normal;
     font-style: oblique;
+    line-height: 15px;
 }
+
+details ul{
+    padding: 1em;
+    background-color: #cbf5c4;
+}
+
 .title_job{
     text-align: left;
     width: 100%;
@@ -326,6 +332,7 @@ details{
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
+    justify-content: space-around;
     width: 100%;
     height: auto;
     padding: 1em;
@@ -352,7 +359,7 @@ details{
     font-style: italic;
     font-weight: lighter;
     text-align: left;
-    line-height: normal;
+    line-height: 30px;
 }
 
 .tit1{
