--- a/css/contact.css
+++ b/css/contact.css
@@ -11,8 +11,42 @@ body{
     flex-direction: column;
     align-items: center;
 }
+
 header{
-    margin-top: 2%;
+    width: 100%;
+    height: 50px;
+    background-color:#fcd5ce;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0%  10%;
+}
+
+.main-nav{
+    width: calc(60%);
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+}
+
+.main-nav li{
+    display: inline-block;
+}
+
+.main-nav li a{
+    text-decoration: none;
+    color: #9C0D38;
+    font-weight: bold;
+}
+
+.main_name{
+    font-family: 'Redressed', cursive;
+    font-size: x-large;
+    font-weight: 500;
+    color:black;
+}
+h1{
+    margin-top: 10%;
     display: flex;
     justify-content: center;
 }
@@ -62,6 +96,7 @@ footer{
     width: 100%;
     bottom: 0;
     color: white;
+    margin-bottom: 1%;
 }
 
 footer img{
