--- a/css/index.css
+++ b/css/index.css
@@ -1,394 +1,160 @@
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+    box-sizing: border-box;
+    
 }
 
 body{
-    margin: 0;
-    padding: 0;
     color: #264653;
+    background-color: #FEFFFE;
     align-items: center;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 header{
-    margin-top: 2%;
+    width: calc(100%);
+    height: 3em;
+    background-color: #fcd5ce;
     display: flex;
-    width: 90%;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    height: 16%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0%  10%;
 }
 
-header .title_big{
+.main-nav{
+    width: calc(60%);
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+}
+
+.main-nav li{
+    display: inline-block;
+}
+
+.main-nav li a{
+    text-decoration: none;
+    color: #9C0D38;
+    font-weight: bold;
+}
+
+.main_name{
+    font-family: 'Redressed', cursive;
+    font-size: x-large;
+    font-weight: 500;
+    color:black;
+}
+
+.home{
+    margin: 2em;
+    width: 50%;
+    height: 50%;
+    background-color: #fcd5ce;
+    display: flex;
+    justify-self: flex-end;
+    box-shadow:
+       inset 0 -0.7em 0.7em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(255,255,255),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+}
+.home article{
+    width: 50%;
+    height: 30em;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    order: 1;   
-    width: 48%;
-    height: 100%;
-    text-align: center;
-    font-size: large;
+    justify-content: space-between;
 }
 
-.title{
-    display: flex;
-    width: 100%;
-    height: 20px;
-    color: #ffffff;
-    background-color: #e76f51;
-    font-weight: bold;
-    font-size: medium;
+.home .photo_profile{
+    margin-top: 6em;
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
-}
-.profile_photo{
-    display: flex;
-    width: 18%;
-    margin: 0%;
     text-align: center;
 }
 
-.profile_photo figure img{
-    width: 75%;
-    height: 100%;
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
+.home .photo_profile img{
     border-radius: 50%;
+    height: 10em;
 }
-.botton{
-    width: 20%;
-    order: 1;
-    display: flex;
-    justify-content: space-around;
-    align-content: space-around;
-    flex-wrap: wrap;
+
+.home h3{
+    margin-top: 0.7em;
+    text-align: center;
+    color:black;
 }
-.button{
+
+hr {
+    height: 5px;
+    background-color: #14213d;
+    width: 5em; 
+    margin: 0.5em;
+}
+
+.home .home_text{
     display: flex;
     justify-content: center;
-    width: 70%;
     align-items: center;
-    height: 26%;
-    background-color: #e76f51;
-    color: white;
-    font-weight: bold;
-    border-radius: 20px;
+    flex-direction: column;
+}
+
+.home article .redes{
+    background-color: currentColor;
     text-align: center;
-}
-.button a{
-    color:white;
-    text-decoration: none;
-}
-
-main{
-    margin-top: 2%;
-    width: 90%;
+    height: 50px;
+    background-color: lavenderblush;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
 }
 
-.left-content{
-    margin-top: 1%;
-    order: -1;    
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 20%;
-    height: 700px;
+.home article .redes img{
+    margin: 0.3em;
 }
 
-.contacto{
+
+.home .profile{
+    background-color: white;
+    justify-content: flex-end;
+}
+
+.home .profile p{
     padding: 1em;
-    border-radius: 20px;
-    background-color: #fdffb6;
-    text-align: center;
-    height: 20%;
-    width: 90%;
-    line-height: 25px;
 }
 
-.contacto figure{
-    width: 100%;
-    text-align: center;
-}
-.contacto img{
+.home .redes img{
     height: auto;
     width: 20px;
     vertical-align: middle;
 }
 
-.blandas {
-    text-align: left;
-    font-weight: bold;
-    width: 90%;
-    height: 23%;
-    background-color: #fdffb6;
-    border-radius: 20px;
-    padding: 1em;
-    line-height: 25px;
-
-}
-.blandas span{
-    font-weight: normal;
-    text-align: left;
-    display:block;
+.home img{
+    width: 50%;
 }
 
-.referencias{ 
-    font-weight: bold;
-    width: 90%;
-    height: 35%;
-    background-color: #fdffb6;
-    border-radius: 20px;
-    padding: 1em;
-    line-height: 25px;
-}
-
-
-
-.referencias span{
-    font-size: small;
-    font-weight: normal;
-    text-align: left;
-    margin-left: 0.5%;
-    display:block;
-    line-height: 20px;
-
-}
-.skill-content{
-    margin-top: 1%;
-    width: 18%;
-    height: auto;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-.skills{
-    padding: 1em;
-    font-weight: bolder;
-    background-color: #90e0ef;
-    border-radius: 18px;
-    width: 100%;
-    height: 26%;
-    display: flex;
-    flex-flow: column;
-    justify-content: space-around;
-}
-.skill_object{
-    order : 1;
-    display: flex;
-    flex-wrap: wrap;
-    justify-self: center;
-    justify-content: center;
-}
-.skills .title{
-    width: 100%;
-    height: 8%;
-    font-weight: bold;
-    font-size: medium;
-}
-
-.skills .title1{    
-    order : 1;
-    width: 100%;
-    height: 8%;
-    font-weight: bold;
-    font-size: medium;
-    margin-left: 8%;
-}
-
-.skills img{
-    width: 73%;
-    height: 68%;
-}
-
-.skills figure{
-    width: 16%;
-    height: 25%;
-    margin: 0.7em;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-    justify-items: center;
-}
-
-.skills figure figcaption{
-    font-size: smaller;
-    color: #14213d;
-    text-align: center;
-    font-style: oblique;
-}
-.skill_tecnical{
-    padding: 1em;
-    font-weight: bolder;
-    background-color: #90e0ef;
-    border-radius: 20px;
-    width: 100%;
-    height: 30%;
-    text-align: center;
-
-
-}
-
-
-.skill_tecnical .titulos_skils{
-    width: 100%;
-    text-align: left;
-    font-weight: bold;
-    font-size: medium;
-}
-
-.skill_tecnical .programas{
-    width: 100%;
-    text-align: left;
-    font-weight: normal;
-    line-height: 23px;
-}
-.cursos{
-    padding: 1em;
-    width: 100%;
-    font-weight: bolder;
-    background-color: #90e0ef;
-    border-radius: 20px;
-    text-align: left;
-}
-
-.cursos ul{
-    margin-left: 25px;
-}
-.cursos a{
-    line-height: 18px;
-    font-weight: normal;
-    color: #264653;
+.profile section a{
     text-decoration: none;
-}
-
-.cursos .more{
-    margin: 10%;
-    text-align:center;
-    color:#e63946;
-    
-}
-.center-content{
-    border-radius: 2%;
-    background-color: #caffbf;
-    margin-top: 1%;
-    order:-1;
-    width: 44%;
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-}
-.experience{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: auto;
-    padding: 1em;
-    font-weight: bold;  
-      
-}
-
-.experience .sub{
-    margin: 2%;
-    width: 100%;
-    font-size: medium;
-    font-weight: normal;
-    font-style: oblique;
-    line-height: 15px;
-}
-
-details ul{
-    padding: 1em;
-    background-color: #cbf5c4;
-}
-
-.title_job{
-    text-align: left;
-    width: 100%;
-    height: auto;
-    text-align: start;
-    font-size: small;
-}
-
-details{
-    margin: 2%;
-    font-weight: lighter;
-    text-align: left;
-}
-
-.education{
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: space-around;
-    width: 100%;
-    height: auto;
-    padding: 1em;
-    margin-top: 0;
-    text-align: center;
-    font-weight: bold;
-    line-height: 1px;
-    padding-bottom: 0%;
-}
-
-.education a{
-    width: 100%;
-    text-align: left;
     color: #14213d;
-    text-decoration: none;
     font-weight: bold;
 }
-
-
-.education .sub{
-    width: 100%;
-    margin-left: 2%;
-    font-size: medium;
-    font-style: italic;
-    font-weight: lighter;
-    text-align: left;
-    line-height: 30px;
-}
-
-.tit1{
-    width: 100%;
-    font-size: medium;
-    font-weight: bold;
-    text-align: left;
-    line-height: 18px;
-}
-
-summary{
-    font-weight: lighter;
-}
-
-
-.profile{
-    order:-1;
-    padding: 1em;
-    font-weight: bold;
-    line-height: 8px;
+.profile section span{
+    width: 7em;
+    height: 100%;
+    background-color: #ade8f4;
+    border-radius: 0.5em;
     text-align: center;
-    padding-bottom: 0%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
-.profile .sub{
-    text-align: left;
-    line-height: 18px;
-    font-weight: normal;
-    
+.profile section{
+    width: 80%;
+    height: 2em;
+    order: -1;
+    display: flex;
+    justify-content: space-around;
+    margin: 1em;
 }
 
 footer{
@@ -397,6 +163,7 @@ footer{
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    margin-bottom: 1%;
 }
 
 footer img{
