--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,11 @@
+html{
+    font-size: 62.5%;
+}
+
 * {
 	margin: 0;
 	padding: 0;
     box-sizing: border-box;
-    
 }
 
 body{
@@ -14,19 +17,19 @@ body{
 }
 
 header{
-    width: calc(100%);
-    height: 3em;
+    width: 100%;
+    height: 4.5rem;
     background-color: #fcd5ce;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0%  10%;
+    padding: 0  10rem;
 }
 
 .main-nav{
-    width: calc(60%);
-    list-style: none;
+    width: calc(55%);
     display: flex;
+    list-style: none;
     justify-content: space-around;
 }
 
@@ -38,22 +41,23 @@ header{
     text-decoration: none;
     color: #9C0D38;
     font-weight: bold;
+    font-size: 1.4rem;
 }
 
 .main_name{
     font-family: 'Redressed', cursive;
-    font-size: x-large;
-    font-weight: 500;
+    font-size: 2.2rem;
     color:black;
 }
 
 .home{
-    margin: 2em;
-    width: 50%;
-    height: 50%;
+    margin: 2rem;
+    width: 60rem;
+    height: 40rem;
     background-color: #fcd5ce;
     display: flex;
     justify-self: flex-end;
+    font-size: 1.6rem;
     box-shadow:
        inset 0 -0.7em 0.7em rgba(0,0,0,0.1),
              0 0  0 2px rgb(255,255,255),
@@ -61,34 +65,37 @@ header{
 }
 .home article{
     width: 50%;
-    height: 30em;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
 .home .photo_profile{
-    margin-top: 6em;
+    margin-top: 6rem;
     display: flex;
     justify-content: center;
     text-align: center;
+    margin-bottom: 1rem;
 }
 
 .home .photo_profile img{
     border-radius: 50%;
-    height: 10em;
+    height: 14rem;
 }
 
 .home h3{
-    margin-top: 0.7em;
+    margin-top: 0.7rem;
     text-align: center;
     color:black;
+    font-size: 1.8rem;
+    font-family: 'Oswald', sans-serif;
 }
 
 hr {
-    height: 5px;
-    background-color: #14213d;
-    width: 5em; 
+    height: 0.6rem;
+    background-color: black;
+    width: 5rem; 
     margin: 0.5em;
 }
 
@@ -120,7 +127,7 @@ hr {
 }
 
 .home .profile p{
-    padding: 1em;
+    padding: 1rem;
 }
 
 .home .redes img{
