--- a/css/contact.css
+++ b/css/contact.css
@@ -1,31 +1,36 @@
+html{
+    font-size: 62.5%;
+}
+
+
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body{
-    width: 100%;
-    height: 100%;
+    color: #264653;
+    background-color: #FEFFFE;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 header{
-    width: 100%;
-    height: 50px;
-    background-color:#fcd5ce;
+    width: 100vw;
+    height: auto;
+    background-color: #fcd5ce;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0%  10%;
+    padding: 0  10rem;
 }
 
 .main-nav{
-    width: calc(60%);
-    list-style: none;
+    width: calc(55%);
     display: flex;
+    list-style: none;
     justify-content: space-around;
 }
 
@@ -37,41 +42,41 @@ header{
     text-decoration: none;
     color: #9C0D38;
     font-weight: bold;
+    font-size: 1.4rem;
+}
+
+.main-nav li a:hover{
+    color: white;
 }
 
 .main_name{
     font-family: 'Redressed', cursive;
-    font-size: x-large;
-    font-weight: 500;
+    font-size: 2.2rem;
     color:black;
 }
+
 h1{
-    margin-top: 10%;
-    display: flex;
-    justify-content: center;
+    margin: 1rem;
+    font-size: 3rem;
 }
 main{
     width: 25%;
     height: 350px;
-    display: flex;
-    justify-self: center;
-    align-content: center;
-    flex-flow: column wrap;
-
 }
 
 form{
-    margin-top: 10%;
+    margin-top: 10px;
     height: 50%;
     border-radius: 4%;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-content: space-around;
-    align-items: flex-start;
+    font-size: 1.6rem;
     border-style:dotted;
     border-color:rgb(182, 182, 155);
     border-width: medium;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
 }
 
 form span{
