--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ body{
 
 header{
     width: 100%;
-    height: 4.5rem;
+    height: auto;
     background-color: #fcd5ce;
     display: flex;
     justify-content: space-between;
@@ -44,16 +44,27 @@ header{
     font-size: 1.4rem;
 }
 
+.main-nav li a:hover{
+    color: white;
+}
+
 .main_name{
     font-family: 'Redressed', cursive;
     font-size: 2.2rem;
     color:black;
 }
 
+main{
+    width: 100vw;
+    height: 100vm;
+}
+
 .home{
-    margin: 2rem;
-    width: 60rem;
-    height: 40rem;
+    width: 56%;
+    min-height: 250px;
+    min-width: 320px;
+    max-width: 550px;
+    margin: 1rem auto;
     background-color: #fcd5ce;
     display: flex;
     justify-self: flex-end;
@@ -65,18 +76,24 @@ header{
 }
 .home article{
     width: 50%;
-    height: 100%;
+}
+.home .photo{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.home .photo_profile{
-    margin-top: 6rem;
+.home .photo-name{
+    text-align: center  ;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    margin: 2em 0;
+}
+
+.home .photo_profile{
     text-align: center;
-    margin-bottom: 1rem;
 }
 
 .home .photo_profile img{
@@ -84,19 +101,21 @@ header{
     height: 14rem;
 }
 
-.home h3{
-    margin-top: 0.7rem;
-    text-align: center;
+.nom_profesion{
+    width: 70%;
     color:black;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     font-family: 'Oswald', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 hr {
-    height: 0.6rem;
+    width: 20%;
+    height: 3px;
     background-color: black;
-    width: 5rem; 
-    margin: 0.5em;
+    border-color: transparent;
 }
 
 .home .home_text{
@@ -107,18 +126,15 @@ hr {
 }
 
 .home article .redes{
-    background-color: currentColor;
+    width: 100%;
     text-align: center;
-    height: 50px;
     background-color: lavenderblush;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .home article .redes img{
-    margin: 0.3em;
+    margin: 3px;
 }
+
 
 
 .home .profile{
@@ -146,22 +162,28 @@ hr {
     font-weight: bold;
 }
 .profile section span{
-    width: 7em;
     height: 100%;
     background-color: #ade8f4;
-    border-radius: 0.5em;
+    border-radius: 5px;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+.profile section a:hover{
+    color:#fefae0;
+}
+
+.profile section span:active{
+    background-color: #e63946;
+}
+
 .profile section{
     width: 80%;
-    height: 2em;
     order: -1;
     display: flex;
     justify-content: space-around;
-    margin: 1em;
 }
 
 footer{
