--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ body{
 
 header{
     width: 100%;
-    height: auto;
+    height: 4.5rem;
     background-color: #fcd5ce;
     display: flex;
     justify-content: space-between;
@@ -60,10 +60,12 @@ main{
 }
 
 .home{
-    width: 56%;
+    width: 60%;
     min-height: 250px;
     min-width: 320px;
-    max-width: 550px;
+    max-width: 600px;
+    height: auto;
+    min-height: 350px;
     margin: 1rem auto;
     background-color: #fcd5ce;
     display: flex;
@@ -84,12 +86,14 @@ main{
 }
 
 .home .photo-name{
+    height: 75%;
     text-align: center  ;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     justify-items: center;
-    margin: 2em 0;
+    margin: 1em 0;
 }
 
 .home .photo_profile{
@@ -118,17 +122,14 @@ hr {
     border-color: transparent;
 }
 
-.home .home_text{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
 
 .home article .redes{
     width: 100%;
-    text-align: center;
+    height: 4rem;
     background-color: lavenderblush;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .home article .redes img{
@@ -136,15 +137,6 @@ hr {
 }
 
 
-
-.home .profile{
-    background-color: white;
-    justify-content: flex-end;
-}
-
-.home .profile p{
-    padding: 1rem;
-}
 
 .home .redes img{
     height: auto;
@@ -156,13 +148,32 @@ hr {
     width: 50%;
 }
 
+
+.home .profile{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.home .profile p{
+    padding: 1rem;
+}
+.profile .sec-button{
+    height: 80px;
+    display: flex;
+    flex-wrap: wrap;
+}
 .profile section a{
     text-decoration: none;
     color: #14213d;
     font-weight: bold;
 }
 .profile section span{
-    height: 100%;
+    min-width: 85px;
+    max-width: 115px;
+    height: 3.5rem;
     background-color: #ade8f4;
     border-radius: 5px;
     text-align: center;
