Acomodar padding header

--- a/css/index.css
+++ b/css/index.css
@@ -18,16 +18,17 @@ body{
 
 header{
     width: 100%;
-    height: 4.5rem;
+    height: auto;
+    min-height: 4.5rem;
     background-color: #fcd5ce;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding: 0  10rem;
+    flex-wrap: wrap;
 }
 
 .main-nav{
-    width: calc(55%);
+    width: calc(47%);
     display: flex;
     list-style: none;
     justify-content: space-around;
@@ -61,9 +62,11 @@ main{
 
 .home{
     width: 60%;
-    min-width: 320px;
+    min-height: 250px;
+    min-width: 300px;
     max-width: 600px;
     height: auto;
+    min-height: 370px;
     margin: 1rem auto;
     background-color: #fcd5ce;
     display: flex;
