--- a/css/index.css
+++ b/css/index.css
@@ -58,43 +58,36 @@ header{
 main{
     width: 100vw;
     height: 100vm;
+    display: flex;
+    justify-content: center;
 }
 
 .home{
-    width: 60%;
-    min-height: 250px;
-    min-width: 300px;
-    max-width: 600px;
+    width: 50%;
+    min-width: 320px;
+    max-width: 570px;
     height: auto;
     min-height: 370px;
-    margin: 1rem auto;
+    margin: 1rem 0;
+    padding-top: 1rem;
     background-color: #fcd5ce;
-    display: flex;
-    justify-self: flex-end;
     font-size: 1.6rem;
     box-shadow:
        inset 0 -0.7em 0.7em rgba(0,0,0,0.1),
              0 0  0 2px rgb(255,255,255),
              0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
-.home article{
-    width: 50%;
-}
-.home .photo{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
 
-.home .photo-name{
-    height: 75%;
-    text-align: center  ;
+.photo_text{
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    flex-flow: column wrap;
     align-items: center;
-    justify-items: center;
-    margin: 1em 0;
+}
+.photo_text section{
+    width: 100%;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
 }
 
 .home .photo_profile{
@@ -102,18 +95,17 @@ main{
 }
 
 .home .photo_profile img{
+    width: 36%;
+    height: auto;
+    min-width: 120px;
     border-radius: 50%;
-    height: 14rem;
 }
 
 .nom_profesion{
-    width: 70%;
     color:black;
     font-size: 1.5rem;
     font-family: 'Oswald', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin-bottom: 1rem;
 }
 
 hr {
@@ -123,48 +115,23 @@ hr {
     border-color: transparent;
 }
 
-
-.home article .redes{
-    width: 100%;
-    height: 4rem;
-    background-color: lavenderblush;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.home article .redes img{
-    margin: 3px;
-}
-
-
-
-.home .redes img{
-    height: auto;
-    width: 20px;
-    vertical-align: middle;
-}
-
-.home img{
-    width: 50%;
-}
-
-
 .home .profile{
     background-color: white;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
     align-items: center;
+
 }
 
 .home .profile p{
-    padding: 1.5rem;
+    padding: 2rem;
 }
+
 .profile .sec-button{
-    height: 80px;
+    width: 60%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 .profile section a{
     text-decoration: none;
@@ -177,7 +144,6 @@ hr {
     height: 3.5rem;
     background-color: #ade8f4;
     border-radius: 5px;
-    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -191,11 +157,15 @@ hr {
     background-color: #e63946;
 }
 
-.profile section{
-    width: 80%;
-    order: -1;
-    display: flex;
-    justify-content: space-around;
+.redes{
+    margin-top: 1rem;
+    text-align: center;
+}
+
+.home .redes img{
+    height: auto;
+    width: 20px;
+    margin: 3px;
 }
 
 footer{
