--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
     --background-color: #FEFFFE;
     --title-size: 2.7rem;
     --title: 2rem;
-    --font-size:  1.6rem;
+    --font-size:  1.7rem;
     --font-size-bold:  1.4rem;
     --title-header-family: 'Redressed', cursive;
     --width: 100vw;
@@ -65,13 +65,12 @@ header{
 }
 main{
     min-width: var(--min-width);
-    background-color: aqua;
     height: auto;
     display: flex;
     flex-wrap: wrap;
 }
 .sect-img-hello{
-    width: 100vw;
+    width: var(--width);
     min-width: var(--min-width);
     height: 35vh;
     min-width: var(--min-width);
@@ -128,6 +127,7 @@ main{
     width: 160px;
     height: 140px;
     border-radius: 50%;
+    margin-bottom: 1rem;
 }
 
 .redes{
@@ -136,6 +136,7 @@ main{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-bottom: 1rem;
 } 
 
 .redes img{
@@ -164,7 +165,7 @@ main{
 .about-me{
     min-width: var(--min-width);
     width: var(--width);
-    padding: 0 2rem;
+    padding: 1rem 2rem;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -194,7 +195,7 @@ p{
     text-align: left;
     font-size: var(--font-size-bold);
     padding: 1.5rem 2rem;
-    padding-left: 4rem;
+    padding-left: 3rem;
 }
 
 ul span{
@@ -211,11 +212,13 @@ ul span{
 .educaction h3{
     font-size: var(--font-size);   
 }
-
+/* premios */
 .awards{
+    width: var(--width);
     min-width: var(--min-width);
     background-color: palegoldenrod;
     padding: 1rem 1.5rem;
+    text-align: center;
 }
 /* skills */
 .skills{
@@ -226,7 +229,7 @@ ul span{
     text-align: left;
     padding: 1rem;
     font-size: var(--font-size);
-    background-color: crimson;
+    background-color: var(--background-color);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -237,9 +240,11 @@ ul span{
 }
 
 .proyectos{
+    padding: 1rem 3rem;
     min-width: var(--min-width);
     width: var(--width);
     background-color: orange;
+    height: 30rem;
 }
 .form-content{
     padding-top: 1rem;
@@ -248,6 +253,7 @@ ul span{
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--background-color);
 }
 form{
     display: flex;
