--- a/css/tablet_index.css
+++ b/css/tablet_index.css
@@ -1,14 +1,32 @@
 main{
+    width: 100vw;
     background-color: orchid;
+    justify-content: center;
 }
+
 
 .photo_redes{
-    width: 45%
+    width: 30vw;
+    order:0;
 }
 
-.about-me{
-    width: 45%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+
+.proyectos{
+    width: 100vw;
+    order: 1;
+}
+
+.skills{
+    width: 100vw;
+    order: 3;
+}
+
+.about-me,.education, .awards{
+    order: 2;
+    width: 50vw;
+}
+
+.form-content{
+    order: 4;
+    width: 100vw;
 }
