--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 :root{
-    --primary-color:  #ffd5c2;
+    --primary-color:  #fcd5ce;
     --second-color:  #ffb703;
     --background-color: #FEFFFE;
     --title-size: 2.7rem;
@@ -33,7 +33,7 @@ body{
 header{
     width: var(--width);
     min-width: var(--min-width);
-    background-color: #fcd5ce;
+    background-color: var(--primary-color);
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -94,7 +94,7 @@ main{
     position: absolute;
     background-color: var(--primary-color);
     color: black;
-    opacity: .9;    
+    opacity: .96;    
 }
 
 
@@ -117,22 +117,32 @@ main{
 .photo_redes{
     min-width: var(--min-width);
     width: var(--width);
+    height: auto;
     padding: 2rem 0;
     background-color: var(--background-color);
     display: flex;
-    flex-direction: column;
+    flex-flow: column;
     align-items: center;
+    overflow: hidden;    
 }
 
-.photo_profile img{
-    width: 160px;
-    height: 140px;
-    border-radius: 50%;
+.photo_profile{
+    width: 220px;
+    height: 200px;
+    overflow: hidden;    
     margin-bottom: 1rem;
+    text-align: center;
+}
+.photo_profile img{
+    max-width:100%;
+    max-height:100%;
+    vertical-align: middle;
+    border-radius: 50%;
+    border: 0.3rem solid black;
 }
 
 .redes{
-    width: 30vw;
+    width: 100vw;
     max-width: 15rem;
     display: flex;
     justify-content: space-around;
@@ -179,6 +189,7 @@ h2, .frase-platzi{
     color: var(--font-color);
     text-align: center;
     font-weight: bolder;
+    margin-bottom: 1.5rem;
 }
 
 p{
@@ -197,6 +208,7 @@ p{
     padding: 1.5rem 2rem;
     padding-left: 3rem;
 }
+
 
 ul span{
     font-style: oblique;
