--- a/css/index.css
+++ b/css/index.css
@@ -127,18 +127,18 @@ main{
 }
 
 .photo_profile{
-    width: 220px;
-    height: 200px;
+    width: auto;
+    height: 240px;
     overflow: hidden;    
     margin-bottom: 1rem;
     text-align: center;
 }
 .photo_profile img{
     max-width:100%;
-    max-height:100%;
+    max-height:100%;    
     vertical-align: middle;
     border-radius: 50%;
-    border: 0.3rem solid black;
+    border: 0.2rem solid var(--font-color);
 }
 
 .redes{
